# sqlx-type-bug

./: Cargo.toml  Dockerfile  README.md  schema.sql
src/: main.rs  types.rs
