[package]
name = "sqlx-type-bug"
version = "0.1.0"
authors = ["Thomas Bracher <tbracher@netwo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.125"
sqlx = { version = "0.4.2", features = ["runtime-actix-native-tls", "postgres"] }
